css/portfoilo.css
/* ... */
.graph h1{
	  font-family: $fontSans;
  font-weight: bold;
  text-align: center;
  font-size: 1.5em;
  padding: .5em 0;
  margin-bottom: 1em;
  border-bottom: 1px solid #dadada;
  letter-spacing: 3px;
  text-transform: uppercase;
}
.graph ul, .graph li  {
 	 {
  		line-height: 2;
   		font-weight: bold;
  		font-family:$fontSans;
  		font-size: .85em;text-transform: uppercase;
  		clear: both;
		// border-bottom: 1px solid $border;
		&:before {
			content: "\2023";
			padding: 0 1em 0 0;
		}
 	}
 }
 .graph ul:before,  .graph li:before {
  content: "\2023";
  padding: 0 1em 0 0;
}
 .bar {
 	background:#00635C;
 	width: 0;
 	margin: .25em 0;
 	color:#00635C ;
 	position: relative;
 	 transition:width 2s, background .2s;
   -webkit-transform: translate3d(0,0,0);
 	 clear: both;
 	:nth-of-type(2n) {
 	 	background:lighten($red , 10% );
	 }}
 	 .label {
		font-size: .75em;
		padding: 1em;
		background: #97DDDF;
		width: 8em;
		display: inline-block;
		position: relative;
		z-index: 2;
		font-weight: bold;
		font-family: $fontSans;
		 &.light {
 	 	background:lighten($dark , 10% );
 	 }

}

 .count {
	position: absolute;
	right: .25em;
	top: .75em;
 	padding: .15em;
	font-size: .75em;
	font-weight: bold;
	font-family: $fontSans;
 }
.hm h1{
font-family: gineso, sans-serif;
font-style: normal;
font-weight: 100;
border-bottom:#0A7A7E solid 1px;}

.lala{	width: 250px;
	float: left;
	padding: 5px 15px;
	margin: 0px 5px 5px 50px;
}
.sweet {
background:linear-gradient(
      rgba(0, 0, 0, 0.70),
      rgba(0, 0, 0, 0.70)),
	url("../Web Design/images/holiday-hack-the-top-x-thanksgiving-cocktails.jpg");
    height: 20%;
	width: 100%;
	padding: 5%;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
	color: #D4D4D4
}

.button{
	padding: 20px;
}
button{
	padding: 1rem;
	color: #D4D4D4;
	background-color: #0A7A7E;
	border: none;
	border-radius: 20px;
	display: inline-block;

}
button a{
	color: #D4D4D4;
	text-decoration: none;
	font-size: 1em;
}
button:hover{
	background-color: #0FB1B7;
}
button:visited{
	background-color: #0A7A7E;
}

button:focus{
	background-color: #0A7A7E;
}


.middle{
	width: 200px;
	float: left;
	padding: 5px 15px;
	margin: 0px 5px 5px 50px;}

.side {
	width: 200px;
	padding: 5px 15px;
	float: left;
	margin: 0px 5px 5px 50px;
}

.projects h1{
	border-bottom:#0A7A7E solid 1px;
}
.projects {
	margin: 0px 5px 5px 50px;
float: left;
	width: 500px;
}
.projects-1  a{
	text-decoration: none;
	color: #0A7A7E;
}
.projects-1 a:hover{
	color: #11AFA5;
}
.projects-1 a:visted, .projects a:focus{
	color: #11AFA5;
}
.projects {
	margin: 0px 5px 5px 10px;
	width: 80%;
	height: auto;
}

.projects-1 {
	margin: 0px 5px 5px 60px;
	width: 200px;
}
.compress img{
	width: 80%;
	height: auto;
	 margin: 10%;
}
.hm{
	width: 100%;
	height: auto;
}

#video-background {
	height: 100px;
	right: 0;
  bottom: -120px;
  min-width: 30%;
  min-height: 50%;
  width: 100%;
  height: 5%;
  z-index: 10;

}
#video-background video{

}
.overlay-desc h1{
	text-align: center;
	font-family: adorn-smooth-condensed-sans, sans-serif;
	font-style: normal;
	font-weight: 400;
	font-size: 9vw;
	color: #D4D4D4;
}
.overlay-desc {
  background:
	rgba(0, 0, 0, 0.70);
  position: absolute;
  top: 0; right: 0; bottom: 0; left: 0;
  display: flex;
  align-items: center;
  justify-content: center;
}
.motor{
	position: relative;
}
.motor video {
  vertical-align: middle;
  width: 100%;
 overflow: hidden;
}

@-webkit-keyframes fade {
  from {opacity: .4}
  to {opacity: 1}
}

@keyframes fade {
  from {opacity: .4}
  to {opacity: 1}
}
	  @media only screen and (max-width: 300px){
		  .enter{padding 25%;}
	  }
/* for mobile */
@media only screen and (max-width:700px) {
	.winter{
		text-align: center;}

		.winter h1 {
			font-size: 2em;
			letter-spacing: 4px;
		}

	}
}
/* On smaller screens, decrease text size */
@media only screen and (max-width: 300px) {
  .prev, .next,.text {font-size: 11px}
}
@media screen and (max-height: 450px)
.sidenav {padding-top: 15px;
.sidenav a {font-size: 18px;}

